[gd_scene load_steps=4 format=3 uid="uid://dwcthpp4hcg71"]

[ext_resource type="Script" uid="uid://cmmuxpgyas5dx" path="res://Objects/Dialogues/map_dialogue.gd" id="1_bnxgr"]
[ext_resource type="Texture2D" uid="uid://vg21d8qmkmcm" path="res://Sprites/HUD/chatbox.png" id="1_ig0lv"]
[ext_resource type="PackedScene" uid="uid://ceoeahh7ckunb" path="res://Objects/Text/SmartText.tscn" id="3_gcalp"]

[node name="MapDialogue" type="TextureRect"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.5
offset_top = -38.0
offset_right = 144.5
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ig0lv")
script = ExtResource("1_bnxgr")
LETTERS_PER_SECOND = 10

[node name="SmartText" parent="." instance=ExtResource("3_gcalp")]
texture_filter = 1
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 283.0
offset_bottom = 70.0
theme_override_font_sizes/normal_font_size = 17
horizontal_alignment = 0
vertical_alignment = 0

[connection signal="text_endedup_showing" from="SmartText" to="." method="_on_smart_text_text_endedup_showing"]
